tests/baselines/reference/generatorTypeCheck36(strict=true).errors.txt
generatorTypeCheck36.ts(2,11): error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.


==== generatorTypeCheck36.ts (1 errors) ====
    function* g() {
        yield yield 0;
              ~~~~~
!!! error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.
    }